--- a/favorites.html
+++ b/favorites.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.d35d1e0a.js></script><link rel=stylesheet href=/Tasty-Treats/favorites.db80aa57.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.8e8b1d61.css><link rel=stylesheet href=/Tasty-Treats/favorites.a78e29e9.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.f1a6cff7.js></script><link rel=stylesheet href=/Tasty-Treats/favorites.db80aa57.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.8e8b1d61.css><link rel=stylesheet href=/Tasty-Treats/favorites.a78e29e9.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -78,6 +78,18 @@
     <div class=loader-overlay id=loader>
       <div class=spinner></div>
     </div>
+    <div class=see-recipe-modal id=see-recipe-modal>
+      <div class=see-recipe-content id=see-recipe-content>
+        <img src=/Tasty-Treats/close-black.d94ef0ed.svg alt=close-button class=close-see-recipe-modal id=close-see-recipe-modal>
+
+        <div class=modal-buttons id=modal-buttons>
+          <button id=remove-btn class=remove-btn>
+              </button>
+
+          <button id=rating-btn class=rating-btn>Give a rating</button>
+        </div>
+      </div>
+    </div>
     <footer class=footer-container>
       <div class=copyright-container>
         <p>
@@ -87,6 +99,6 @@
         </p>
       </div>
     </footer>
-    <script type=module src=/Tasty-Treats/favorites.9271c5b2.js></script>
+    <script type=module src=/Tasty-Treats/favorites.c5690820.js></script>
   
 
