--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.f1a6cff7.js></script><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.e83239f0.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.85ca7c94.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.01ffa9c7.js></script><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.e83239f0.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.ec00c049.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -189,6 +189,29 @@
         </div>
       </div>
     </div>
+    <div class=rating-modal id=rating-modal>
+      <div class=rating-modal-content id=rating-modal-content>
+        <img src=/Tasty-Treats/close-black.d94ef0ed.svg alt=close-button class=close-rating-modal id=close-rating-modal>
+        <div class=rating-container>
+          <h3>Rating</h3>
+          <div class=star-rating id=star-rating>
+            <span id=rating-data>0.0</span>
+            <span class=star data-value=1>★</span>
+            <span class=star data-value=2>★</span>
+            <span class=star data-value=3>★</span>
+            <span class=star data-value=4>★</span>
+            <span class=star data-value=5>★</span>
+          </div>
+          <input type=hidden id=rating-value name=rating value=0>
+        </div>
+
+        <form class=rating-form>
+          <label for=email></label>
+          <input type=email id=rating-email name=email placeholder="Enter your email" required pattern=[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$>
+          <button class=rating-modal-btn>Send</button>
+        </form>
+      </div>
+    </div>
     <footer class=footer-container>
       <div class=copyright-container>
         <p>
@@ -199,6 +222,6 @@
       </div>
     </footer>
     <script src=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js></script>
-    <script type=module src=/Tasty-Treats/Tasty-Treats.8bfeaf08.js></script>
+    <script type=module src=/Tasty-Treats/Tasty-Treats.ed2ecb5a.js></script>
   
 
