--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.01ffa9c7.js></script><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.e83239f0.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.ec00c049.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.01ffa9c7.js></script><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.e83239f0.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.b6730eb6.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -192,7 +192,7 @@
     <div class=rating-modal id=rating-modal>
       <div class=rating-modal-content id=rating-modal-content>
         <img src=/Tasty-Treats/close-black.d94ef0ed.svg alt=close-button class=close-rating-modal id=close-rating-modal>
-        <div class=rating-container>
+        <div class=rating-container id=rating-container>
           <h3>Rating</h3>
           <div class=star-rating id=star-rating>
             <span id=rating-data>0.0</span>
@@ -205,9 +205,9 @@
           <input type=hidden id=rating-value name=rating value=0>
         </div>
 
-        <form class=rating-form>
+        <form class=rating-form id=rating-form>
           <label for=email></label>
-          <input type=email id=rating-email name=email placeholder="Enter your email" required pattern=[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$>
+          <input type=email id=rating-email name=email placeholder="Enter your email" required>
           <button class=rating-modal-btn>Send</button>
         </form>
       </div>
@@ -222,6 +222,6 @@
       </div>
     </footer>
     <script src=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js></script>
-    <script type=module src=/Tasty-Treats/Tasty-Treats.ed2ecb5a.js></script>
+    <script type=module src=/Tasty-Treats/Tasty-Treats.ecb8d0ad.js></script>
   
 
