--- a/src/favorites.html
+++ b/src/favorites.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasty Treats</title>
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/favorites.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
       <div class="header-container">
         <div class="header-container-logo light" id="light-theme-logo">
-          <div class="header-list desktop-list">
+          <div class="desktop-list header-list">
             <a href="./index.html">Home</a>
             <a href="./favorites.html">Favorites</a>
           </div>
@@ -44,8 +45,8 @@
           </div>
         </div>
 
-        <div class="header-container-logo dark" id="dark-theme-logo">
-          <div class="header-list desktop-list">
+        <div class="dark header-container-logo" id="dark-theme-logo">
+          <div class="desktop-list header-list">
             <a href="./index.html">Home</a>
             <a href="./favorites.html">Favorites</a>
           </div>
@@ -77,7 +78,7 @@
             <button class="close-sidebar" id="close-sidebar">
               <img src="./assets/logo/close-sidebar.svg" alt="close-button" />
             </button>
-            <div class="sidebar-list mobile-list">
+            <div class="mobile-list sidebar-list">
               <a href="./index.html">Home</a>
               <a href="./favorites.html">Favorites</a>
               <label class="theme-switch-sidebar">
@@ -90,26 +91,101 @@
       </div>
     </header>
 
-    <section class="main-content">
-      <div class="empty-page">
+    <section class="main-content" id="main-content">
+      <div id="favorites-content" class="favorites-content">
+        <div class="fav-img" id="fav-img">
+          <img
+            src="./assets/images/favorites-img-tablet.png"
+            alt="food on a plate"
+            class="favorites-img-tablet"
+          />
+          <img
+            src="./assets/images/favorites-img-desktop.png"
+            alt="food on a plate"
+            class="favorites-img-desktop"
+          />
+          <img
+            src="./assets/images/favorites-img-mobile.png"
+            alt="food on a plate"
+            class="favorites-img-mobile"
+          />
+        </div>
+
+        <div id="empty-page" class="empty-page">
+          <img src="./assets/logo/favorites-empty-page.svg" alt="empty-page" />
+          <p>
+            It appears that you haven't added any recipes to your favorites yet.
+            To get started, you can add recipes that you like to your favorites
+            for easier access in the future.
+          </p>
+        </div>
+      </div>
+      <div id="recipe-results" class="recipe-results-fav"></div>
+      <div id="pagination" class="tui-pagination"></div>
+    </section>
+    <div class="loader-overlay" id="loader">
+      <div class="spinner"></div>
+    </div>
+    <div class="see-recipe-modal" id="see-recipe-modal">
+      <div class="see-recipe-content" id="see-recipe-content">
         <img
-          src="./assets/images/favorites-img-tablet.png"
-          alt="food on a plate"
-          class="favorites-img-tablet"
+          src="./assets/logo/close-black.svg"
+          alt="close-button"
+          class="close-see-recipe-modal"
+          id="close-see-recipe-modal"
         />
+
+        <div class="modal-buttons" id="modal-buttons">
+          <button id="remove-btn" class="remove-btn"></button>
+
+          <button id="rating-btn" class="rating-btn">Give a rating</button>
+        </div>
+      </div>
+    </div>
+    <div class="rating-modal" id="rating-modal">
+      <div class="rating-modal-content" id="rating-modal-content">
         <img
-          src="./assets/images/favorites-img-desktop.png"
-          alt="food on a plate"
-          class="favorites-img-desktop"
+          src="./assets/logo/close-black.svg"
+          alt="close-button"
+          class="close-rating-modal"
+          id="close-rating-modal"
         />
-        <img src="./assets/logo/favorites-empty-page.svg" alt="empty-page" />
+        <div class="rating-container" id="rating-container">
+          <h3>Rating</h3>
+          <div class="star-rating" id="star-rating">
+            <span id="rating-data">0.0</span>
+            <span class="star" data-value="1">★</span>
+            <span class="star" data-value="2">★</span>
+            <span class="star" data-value="3">★</span>
+            <span class="star" data-value="4">★</span>
+            <span class="star" data-value="5">★</span>
+          </div>
+          <input type="hidden" id="rating-value" name="rating" value="0" />
+        </div>
+
+        <form class="rating-form" id="rating-form">
+          <label for="email"></label>
+          <input
+            type="email"
+            id="rating-email"
+            name="email"
+            placeholder="Enter your email"
+            required
+          />
+          <button class="rating-modal-btn">Send</button>
+        </form>
+      </div>
+    </div>
+    <footer class="footer-container">
+      <div class="copyright-container">
         <p>
-          It appears that you haven't added any recipes to your favorites yet.
-          To get started, you can add recipes that you like to your favorites
-          for easier access in the future.
+          © 2025 | All Rights Reserved | Developed with
+          <img src="./assets/logo/heart.svg" alt="heart" />
+          by GoIT Students
         </p>
       </div>
-    </section>
-    <script type="module" src="./index.js"></script>
+    </footer>
+
+    <script type="module" src="./js/favorites/favorites.js"></script>
   </body>
 </html>
