--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasty Treats</title>
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
+
+    <!-- Fonts & Swiper -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Swiper CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
       <div class="header-container">
         <div class="header-container-logo light" id="light-theme-logo">
-          <div class="header-list desktop-list">
+          <div class="desktop-list header-list">
             <a href="#home">Home</a>
             <a href="./favorites.html">Favorites</a>
           </div>
@@ -25,17 +42,17 @@
               src="./assets/logo/logo.svg"
               alt="logo"
               id="home"
-              width="83px"
-              height="18px"
-          /></a>
+              width="83"
+              height="18"
+            />
+          </a>
           <div class="header-icons">
-            <img src="./assets/logo/shopping-cart.svg" alt="logo" />
+            <img src="./assets/logo/shopping-cart.svg" alt="shopping cart" />
             <img
               src="./assets/logo/burger-menu.svg"
-              alt="logo"
+              alt="burger menu"
               id="open-sidebar"
             />
-
             <label class="theme-switch">
               <input type="checkbox" id="theme-toggle-light" />
               <span class="slider"></span>
@@ -43,8 +60,8 @@
           </div>
         </div>
 
-        <div class="header-container-logo dark" id="dark-theme-logo">
-          <div class="header-list desktop-list">
+        <div class="dark header-container-logo" id="dark-theme-logo">
+          <div class="desktop-list header-list">
             <a href="#home">Home</a>
             <a href="./favorites.html">Favorites</a>
           </div>
@@ -76,7 +93,7 @@
             <button class="close-sidebar" id="close-sidebar">
               <img src="./assets/logo/close-sidebar.svg" alt="close-button" />
             </button>
-            <div class="sidebar-list mobile-list">
+            <div class="mobile-list sidebar-list">
               <a href="#home">Home</a>
               <a href="./favorites.html">Favorites</a>
               <label class="theme-switch-sidebar">
@@ -91,57 +108,198 @@
     <section class="hero">
       <div class="hero-container">
         <div class="hero-title">
-          <h2>
-            Learn to Cook <span>Tasty Treats'</span> Customizable Masterclass
-          </h2>
-          <h3>
-            TastyTreats - Customize Your Meal with Ingredient Options and
-            Step-by-Step Video Guides.
-          </h3>
+          <div>
+            <h2>
+              Learn to Cook <span>Tasty Treats'</span> Customizable Masterclass
+            </h2>
+            <h3>
+              TastyTreats - Customize Your Meal with Ingredient Options and
+              Step-by-Step Video Guides.
+            </h3>
+          </div>
+
+          <div>
+            <button class="order-button" id="open-order-now-modal">
+              Order now
+            </button>
+          </div>
         </div>
-        <button class="order-button" id="open-order-now-modal">
-          Order now
-        </button>
+
+        <div class="swiper">
+          <div class="swiper-wrapper" id="masterclass-list"></div>
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
 
       <div class="order-now-modal" id="order-now-modal">
         <div class="order-now-content">
           <img
             src="./assets/logo/close-black.svg"
-            alt="close-button"
+            alt="close button"
             class="close-order-now-modal"
             id="close-order-now-modal"
           />
-
           <h3>Order now</h3>
           <form class="order-now-form" id="order-now-form">
             <label for="name">Name</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              required
-              pattern="[A-Za-z\s]+"
-            />
+            <input id="name" name="name" required pattern="[A-Za-z\s]+" />
             <label for="phone">Phone number</label>
-            <input type="tel" id="phone" required pattern="\d{10}" />
+            <input type="tel" id="phone" required />
             <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              required
-              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-            />
+            <input type="email" id="email" name="email" required />
             <label for="text">Comment</label>
             <textarea id="text" name="text" rows="4"></textarea>
-
-            <button type="submit" class="send-order-btn">Send</button>
+            <button class="send-order-btn">Send</button>
           </form>
         </div>
       </div>
     </section>
 
+    <section class="categories">
+      <div class="categories-wrapper">
+        <div class="categories-container">
+          <button class="all-categories-btn" id="all-categories-btn">
+            All categories
+          </button>
+          <div class="categories-list">
+            <div id="categories-list" class="categories-content"></div>
+          </div>
+        </div>
+
+        <div class="popular-recipes" id="popular-recipes">
+          <ul class="recipes-list" id="recipes-list">
+            <h3 class="recipes-list-title">Popular recipes</h3>
+          </ul>
+        </div>
+      </div>
+
+      <div class="search-recipes">
+        <div class="search-recipes-container">
+          <div class="search-recipes-wrapper">
+            <div class="input-wrapper">
+              <label for="search-recipes">Search</label>
+              <input
+                id="search-recipes"
+                name="search-recipes"
+                placeholder="Enter text"
+              />
+            </div>
+          </div>
+
+          <div class="recipe-filters">
+            <div class="select-wrapper">
+              <label for="search-by-time">Time</label>
+              <select name="search-by-time" id="search-by-time">
+                <option value="5">5 min</option>
+                <option value="10">10 min</option>
+                <option value="15">15 min</option>
+                <option value="20">20 min</option>
+                <option value="25">25 min</option>
+                <option value="30">30 min</option>
+                <option value="35">35 min</option>
+                <option value="40">40 min</option>
+                <option value="45">45 min</option>
+                <option value="50">50 min</option>
+                <option value="55">55 min</option>
+                <option value="60">60 min</option>
+                <option value="65">65 min</option>
+                <option value="70">70 min</option>
+                <option value="75">75 min</option>
+                <option value="80">80 min</option>
+                <option value="85">85 min</option>
+                <option value="90">90 min</option>
+                <option value="95">95 min</option>
+                <option value="100">100 min</option>
+                <option value="105">105 min</option>
+                <option value="110">110 min</option>
+                <option value="115">115 min</option>
+                <option value="120">120 min</option>
+              </select>
+            </div>
+            <div class="select-wrapper">
+              <label for="search-by-area">Area</label>
+              <select name="search-by-area" id="search-by-area"></select>
+            </div>
+            <div class="select-wrapper">
+              <label for="search-by-ingredients">Ingredients</label>
+              <select
+                id="search-by-ingredients"
+                style="max-height: 200px; overflow-y: auto"
+              ></select>
+            </div>
+          </div>
+        </div>
+
+        <div id="recipe-results" class="recipe-results"></div>
+        <div id="pagination" class="tui-pagination"></div>
+      </div>
+    </section>
+
+    <div class="loader-overlay" id="loader">
+      <div class="spinner"></div>
+    </div>
+
+    <div class="see-recipe-modal" id="see-recipe-modal">
+      <div class="see-recipe-content" id="see-recipe-content">
+        <img
+          src="./assets/logo/close-black.svg"
+          alt="close button"
+          class="close-see-recipe-modal"
+          id="close-see-recipe-modal"
+        />
+        <div class="modal-buttons" id="modal-buttons">
+          <button id="remove-btn" class="remove-btn">Add to favorites</button>
+          <button id="rating-btn" class="rating-btn">Give a rating</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="rating-modal" id="rating-modal">
+      <div class="rating-modal-content" id="rating-modal-content">
+        <img
+          src="./assets/logo/close-black.svg"
+          alt="close button"
+          class="close-rating-modal"
+          id="close-rating-modal"
+        />
+        <div class="rating-container" id="rating-container">
+          <h3>Rating</h3>
+          <div class="star-rating" id="star-rating">
+            <span id="rating-data">0.0</span>
+            <span class="star" data-value="1">★</span>
+            <span class="star" data-value="2">★</span>
+            <span class="star" data-value="3">★</span>
+            <span class="star" data-value="4">★</span>
+            <span class="star" data-value="5">★</span>
+          </div>
+          <input type="hidden" id="rating-value" name="rating" value="0" />
+        </div>
+
+        <form class="rating-form" id="rating-form">
+          <label for="rating-email"></label>
+          <input
+            type="email"
+            id="rating-email"
+            name="email"
+            placeholder="Enter your email"
+            required
+          />
+          <button class="rating-modal-btn">Send</button>
+        </form>
+      </div>
+    </div>
+
+    <footer class="footer-container">
+      <div class="copyright-container">
+        <p>
+          © 2025 | All Rights Reserved | Developed with
+          <img src="./assets/logo/heart.svg" alt="heart" />
+          by GoIT Students
+        </p>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
